--- a/webroot/css/yellowdesks.css
+++ b/webroot/css/yellowdesks.css
@@ -25,8 +25,14 @@ th {
 
 input[type=text], input[type=password] {
     width: 100%;
+    
 }
 
 tr:nth-child(odd) {
     background: #eee;
+}
+
+input[readonly] {
+    background-color: #eee;
+    border: 1px solid darkgray;
 }
