signup: now available for host signup

--- a/webroot/css/signup.css
+++ b/webroot/css/signup.css
@@ -3,18 +3,18 @@
     flex-direction: row;
     flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
-    -webkit-box-wrap: wrap;
 }
 
 .description {
     flex: 1;
     padding-right: 100px;
+    min-width: 300px;
 }
 .signupform {
     flex: 2;
 }
 
-.signup table tr td {
+.signup table tr td, .signup tr {
     background: white;
 }
 
@@ -23,7 +23,7 @@
     border-bottom: 3px dotted black;
 }
 
-.signup input[type=submit] {
+.signup input[type=submit], button {
     border: 1px solid black;
     height: 40px;
     background-color: white;
@@ -35,7 +35,7 @@ label {
     font-size: 12px;
 }
 
-input {
+input, button {
     font-size: 15px;
 }
 
@@ -57,7 +57,7 @@ span {
 }
 
 .errorline {
-    line-height: 0px;
+    line-height: 7px;
     height: 1px;
 }
 
@@ -66,4 +66,12 @@ select:focus,
 textarea:focus,
 button:focus {
     outline: none;
+}
+
+.right {
+    float: right;
+}
+
+.error, input[type="text"].error, input[type="password"].error  {
+    border: 1px dotted red;
 }
