--- a/webroot/css/yellowdesks.css
+++ b/webroot/css/yellowdesks.css
@@ -6,6 +6,14 @@ body {
     font-weight: 100;
 }
 
+body a {
+color: #000000; 
+}
+body a:focus,
+body a:hover {
+color: #000000; 
+}
+
 .din {font-family: din;}
 
 .eraser {font-family: eraserregular;}
