--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -23,6 +23,14 @@ body {
     line-height: 1.4;
 }
 
+body a {
+color: #000000; 
+}
+body a:focus,
+body a:hover {
+color: #000000; 
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
