--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -31,6 +31,10 @@ body a:hover {
 color: #333333; 
 }
 
+.smalllogo .yellowdesks {
+    font-size: 25px;
+}
+
 /*
  * Remove text-shadow in selection highlight: h5bp.com/i
  * These selection rule sets have to be separate.
