--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -79,15 +79,23 @@ padding: 6px;
 }
 
 .menu {
-    padding-top: 10px;
-    padding-right: 10px;
+    padding-top: 1px;
+    padding-right: 2px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     position: absolute;
     right: 0;
+        
+    
     z-index: 100;
 }
+
+.mobilemenu > .menu-mobile > .menu  {
+    display: block;
+    padding-top: 50px;
+}
+
 @media (max-width: 600px) {
     .menu {
         justify-content: flex-start;
@@ -99,7 +107,6 @@ padding: 6px;
         font-size: 10px;
         width: 100%;
         padding-right: 0px;
-        padding-top: 50px;
     }
     .menu a {
         flex-grow: 1;
@@ -129,4 +136,43 @@ padding: 6px;
 }
 .androidlogo img, .facebooklogo img, .questionmark img {
     height: 20px;
+}
+
+#pac-input {
+    font-size: 19px;
+    z-index: 10000;
+    margin-top: 9px;
+    width: 150px;
+}
+
+#pac-input:focus {
+    width: 220px;
+}
+
+.burger .androidlogo img {
+    z-index: 10000;
+    top: 8px;
+    right: 55px;
+    width: 36px;
+    height: 38px;
+    padding: 7px;
+}
+
+.burger img {
+    right: 10px;
+    top: 10px;
+    width: 40px;
+    position: absolute;
+    z-index: 10000;
+    background: white;
+    padding: 7px;
+}
+
+.mobilemenu a {
+    margin: 0px;
+}
+
+.menu a {
+    display: block;
+    border: 1px solid #ececec;
 }
