--- a/webroot/css/signup.css
+++ b/webroot/css/signup.css
@@ -41,11 +41,11 @@ margin-top: 40px;
 }
 
 .signup #finish {
-   background-color: #000;
+    background-color: #000;
     color: #f3ed3d;
 }
 .signup #finish:hover {
-   background-color: #f3ed3d;
+    background-color: #f3ed3d;
     color: #000;
 }
 
@@ -53,7 +53,7 @@ label {
     font-size: 12px;
 }
 
-input, button {
+input, button, textarea {
     font-size: 18px;
     padding: 8px 10px;
     margin-bottom: 4px;
